# mirror

./: .gitignore  .netlifyignore  AGENTS.md  LICENSE  README.md  albums.md  cli.py  design.md  mypy.ini  photos.md  places.toml  pyproject.toml  requirements.md  requirements.txt  scraper.js  setup.py  test.py  things.toml  things.yaml  videos.md
.claude/: settings.json
artifacts/: env.json
artifacts/atom/: atom-index.xml  atom-page-067cf10c.xml  atom-page-0a2175d7.xml  atom-page-0aa5db6a.xml  atom-page-0b6594aa.xml  atom-page-0d0b3413.xml  atom-page-0f21f8b3.xml  atom-page-10fda201.xml  atom-page-113fc2f1.xml  atom-page-17c8da62.xml  atom-page-1b454747.xml  atom-page-1e1edc07.xml  atom-page-20ce7537.xml  atom-page-21dbe081.xml  atom-page-25485ba9.xml  atom-page-2770741a.xml  atom-page-28895e20.xml  atom-page-2cf1d488.xml  atom-page-3e867809.xml  atom-page-3fdc28e6.xml  atom-page-41cad466.xml  atom-page-43d058a5.xml  atom-page-4b84a8fb.xml  atom-page-4c93f078.xml  atom-page-4e3cd3eb.xml  atom-page-5b132f50.xml  atom-page-5c64ab7b.xml  atom-page-6921a2bd.xml  atom-page-73f118c4.xml  atom-page-79152706.xml  atom-page-7d7d7d12.xml  atom-page-7ff24820.xml  atom-page-82efe0bf.xml  atom-page-84940fd2.xml  atom-page-87641e11.xml  atom-page-89915001.xml  atom-page-89ecd09d.xml  atom-page-8c0166e6.xml  atom-page-9456f055.xml  atom-page-98dbdd92.xml  (+29 more)
bs/: activate.sh  build.sh  clean.sh  docker:build.sh  format.sh  install.sh  labeller.sh  lint.sh  open:albums.sh  open:photos.sh  publish.sh  read_albums_md.sh  read_photos_md.sh  run.sh  scan.sh  upload.sh  write_albums_md.sh  write_photos_md.sh  write_triples.sh
labeller/: app.py  filters.py  image_loader.py  messages.py  opener.py  parser.py  state.py  things.py  vision.py  widgets.py  writer.py
labeller/albums/: pane.py  parser.py  state.py  widgets.py  writer.py
labeller/photos/: filters.py  pane.py  parser.py  state.py  vision.py  widgets.py  writer.py
labeller/things/: __init__.py  loader.py  transfers.py  trips.py  urns.py
labeller/things_editor/: pane.py  state.py  widgets.py  writer.py
labeller/videos/: filters.py  pane.py  parser.py  state.py  widgets.py  writer.py
schemas/: tagfile.json
src/: album.py  artifacts.py  cdn.py  cli.py  colours.py  config.py  constants.py  database.py  encoder.py  exceptions.py  exif.py  flags.py  linnaeus.py  log.py  manifest.py  media.py  metadata.py  mirror.py  mirror_types.py  model.py  phash.py  photo.py  scanner.py  schema.json  spaces.py  storage.py  syndications.py  tables.py  tagfile.py  tags.py  things.py  types.py  uploader.py  utils.py  vault.py  video.py
src/commands/: add_answers.py  add_google_photos_metadata.py  add_google_vision_metadata.py  feed.py  init.py  list_photos.py  list_tagfiles.py  list_tags.py  publish.py  publisher.py  read_metadata.py  scanner.py  show_tagfiles.py  tag.py  tag_faces.py  uploader.py  write_metadata.py
src/data/: binomials.py  birds.csv  birdwatch.py  countries.py  flags.csv  geoname.py  mammals.csv  types.py  wikidata.py
src/haystack/: cli.py
src/mirror/: album.py  ansi.py  cdn.py  cli.py  config.py  constants.py  database.py  encoder.py  exif.py  media.py  metadata.py  photo.py  tables.py  things.py  utils.py  vault.py  video.py
src/mirror/commands/: build.py  publisher.py  read_metadata.py  run.py  scanner.py  upload.py  uploader.py  write_metadata.py  write_triples.py
src/mirror/commons/: __init__.py  ansi.py  config.py  constants.py  dates.py  encoding_types.py  exceptions.py  tables.py  urn.py  utils.py
src/mirror/data/: binomials.py  birdwatch.py  countries.py  geoname.py  mirror.py  photo_relations.py  places.py  things.py  unesco.py  wikidata.py
src/mirror/haystack/: cli.py
src/mirror/models/: __init__.py  album.py  exif.py  media.py  mirror_types.py  phash.py  photo.py  video.py
src/mirror/schemas/: album_metadata.json  photo_metadata.json
src/mirror/services/: __init__.py  cdn.py  d1.py  database.py  encoder.py  metadata.py  things.py  vault.py  (+1 more)
src/schemas/: album_metadata.json  photo_metadata.json
src/server/: app.py
src/vermiel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+41 files in other folders)
