[project]
name = "mirror-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3",
  "botocore",
  "dateparser",
  "docopt",
  "ffmpeg-python",
  "jsonschema",
  "imagehash",
  "numpy",
  "opencv-python",
  "Pillow",
  "python-dotenv",
  "PyYAML",
  "sqlean.py",
  "requests",
  "xmltodict"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
