[project]
name = "mirror"
version = "0.1.0"
description = "Media asset management and publishing workflow engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3",
  "botocore",
  "dateparser",
  "ffmpeg-python",
  "imagehash",
  "jsonschema",
  "levenshtein",
  "numpy",
  "opencv-python",
  "Pillow",
  "python-dotenv",
  "PyYAML",
  "requests",
  "sqlean.py",
  "xmltodict",
  "feedgen",
  "markdown",
  "tomli-w",
  "typeguard",
  "psutil",
  "zahir @ file:///home/rg/Code/zahir",
  "google-generativeai",
  "textual>=8.2.3",
  "rich-pixels>=3.0.1",
  "textual-image>=0.11.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"src/mirror/commons/__init__.py" = ["F403", "F405"]

[project.scripts]
mirror = "mirror.cli:main"
[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]
